--- a/targetPractice.html
+++ b/targetPractice.html
@@ -10,7 +10,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
     <script>
-
+        //Doc Ready function - runs when page is fully loaded
+        $(document).ready(function(){
+            $("#myText");
+        });
     </script>
 
 </head>
