--- a/targetPractice.html
+++ b/targetPractice.html
@@ -12,7 +12,7 @@
     <script>
         //Doc Ready function - runs when page is fully loaded
         $(document).ready(function(){
-            $("#myText");
+            $("#");
         });
     </script>
 
@@ -22,7 +22,7 @@
 
     <div class="row">
         <div class="col-12">
-            <p id="myText">My text to target.</p>
+            <p id="">My text to target.</p>
 
             <hr>
             <p class="additionalText">More text to target.</p>
